--- a/nachos/test/Makefile
+++ b/nachos/test/Makefile
@@ -31,7 +31,7 @@ STDLIB_O = start.o stdio.o stdlib.o
 LIB = assert atoi printf readline stdio strncmp strcat strcmp strcpy strlen memcpy memset
 NLIB = libnachos.a
 
-TARGETS = halt sh matmult sort echo cat cp mv rm write write1 write4 write10
+TARGETS = halt sh matmult sort echo cat cp mv rm write write1 write4 write10 join exit execargh1 except1
 
 .SECONDARY: $(patsubst %.c,%.o,$(wildcard *.c))
 
